# python-html-lisfy

./: README.md  pyproject.toml
src/html_lisfy/: __main__.py  reader.py  rep.py  types.py
src/html_lisfy/subr/: itertools.py  reader.py
